<resources>
    <string name="app_name">Voice Diary</string>
    <string name="text_button_auth">Войти через VK</string>
    <string name="text_auth_description">Для того, чтобы продолжить работу, необходимо авторизоваться в VK. \nЭто позволит Вам сохранять аудио в VK документы</string>
    <string name="hint_auth">Если у Вас установлено приложение ВКонтакте, то авторизация произойдет через него\nВы можете авторизоваться позже на экране настроек</string>
    <string name="message_connection_error">Connection error</string>
    <string name="message_unknown_error">Unknown error. Try again later.</string>
    <string name="text_action_retry">Повторить</string>
    <string name="description_mic_fab">Начать запись голосового сообщения</string>
    <string name="description_settings_fab">Открыть экран настроек</string>
    <string name="description_stop_record_fab">Остановить запись голосового сообщения</string>
    <string name="text_without_auth_button">Без авторизации</string>
    <string name="text_skip_auth_checkbox">Пропускать экран авторизации</string>
    <string name="text_sync_button">Сохранить в VK Документы</string>
    <string name="title_settings_fragment">Настройки</string>
    <string name="text_hint_auth">Вы уже авторизованы</string>
    <string name="text_sign_out_button">Выйти из уч. записи</string>
    <string name="title_records_fragment">Ваши записи</string>
    <string name="alert_open_settings_while_record">Сейчас происходит запись голосового сообщения, если Вы перейдете в настройки, запись будет остановлена</string>
    <string name="alert_request_record_permission">Для записи голосовых сообщений, необходимо предоставить приложению доступ к микрофону, далее будет запрошено соответствующее разрешение</string>
    <string name="error_missing_filename">Необходимо ввести имя</string>
    <string name="bottom_sheet_title">Сохранение аудиозаписи</string>
    <string name="hint_enter_filename_text_field">Имя аудиозаписи</string>
    <string name="text_save_button">Сохранить</string>
    <string name="play_audio_button_description">Начать воспроизведение аудиозаписи</string>
    <string name="pause_audio_button_descrition">Приостановить воспроизведение аудиозаписи</string>
    <string name="msg_snackbar_record_deleted">Запись удалена</string>
</resources>