<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="12dp"
    android:paddingVertical="16dp"
    android:paddingHorizontal="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/bottom_sheet_title"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_entered_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start|top"
        android:hint="@string/hint_enter_filename_text_field"
        android:enabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:gravity="start|top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/text_save_button"
        android:textSize="18sp"/>
</LinearLayout>